--- a/frontend/src/app/layouts/register/register.component.html
+++ b/frontend/src/app/layouts/register/register.component.html
@@ -1,58 +1,58 @@
+<!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
 <div class="form-main">
-    <div class="background-elements">
-      <div class="circle circle-1"></div>
-      <div class="circle circle-2"></div>
-      <div class="circle circle-3"></div>
-      <div class="circle circle-4"></div>
-    </div>
-    <div class="form-content">
-      <h3 class="gradient-text">Crear Cuenta</h3>
-      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-        <div class="input-box">
-          <input
-            type="text"
-            class="input-control"
-            formControlName="name"
-            placeholder="Nombre"
-          />
-        </div>
-        <div class="input-box">
-          <input
-            type="text"
-            class="input-control"
-            formControlName="username"
-            placeholder="Nombre de Usuario"
-          />
-        </div>
-        <div class="input-box">
-          <input
-            type="email"
-            class="input-control"
-            formControlName="email"
-            placeholder="Correo Electrónico"
-          />
-        </div>
-        <div class="input-box">
-          <input
-            [type]="passwordVisible ? 'text' : 'password'"
-            class="input-control"
-            formControlName="password"
-            placeholder="Contraseña"
-          />
-          <i class="fas" [ngClass]="passwordVisible ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility()"></i>
-        </div>
-        <div class="input-box">
-          <input
-            [type]="passwordVisible ? 'text' : 'password'"
-            class="input-control"
-            formControlName="confirmPassword"
-            placeholder="Confirmar Contraseña"
-          />
-          <i class="fas" [ngClass]="passwordVisible ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility()"></i>
-        </div>
-        <button type="submit" class="btn" [disabled]="loading">Crear Cuenta</button>
-        <p>¿Ya tienes una cuenta? <a routerLink="/login">Iniciar Sesión</a></p>
-      </form>
-    </div>
+  <div class="background-elements">
+    <div class="circle circle-1"></div>
+    <div class="circle circle-2"></div>
+    <div class="circle circle-3"></div>
+    <div class="circle circle-4"></div>
   </div>
-  
+  <div class="form-content">
+    <h3 class="gradient-text">Crear Cuenta</h3>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <div class="input-box">
+        <input
+          type="text"
+          class="input-control"
+          formControlName="name"
+          placeholder="Nombre"
+        />
+      </div>
+      <div class="input-box">
+        <input
+          type="text"
+          class="input-control"
+          formControlName="username"
+          placeholder="Nombre de Usuario"
+        />
+      </div>
+      <div class="input-box">
+        <input
+          type="email"
+          class="input-control"
+          formControlName="email"
+          placeholder="Correo Electrónico"
+        />
+      </div>
+      <div class="input-box">
+        <input
+          [type]="passwordVisible ? 'text' : 'password'"
+          class="input-control"
+          formControlName="password"
+          placeholder="Contraseña"
+        />
+        <i class="fas" [ngClass]="passwordVisible ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility()"></i>
+      </div>
+      <div class="input-box">
+        <input
+          [type]="confirmPasswordVisible ? 'text' : 'password'"
+          class="input-control"
+          formControlName="confirmPassword"
+          placeholder="Confirmar Contraseña"
+        />
+        <i class="fas" [ngClass]="confirmPasswordVisible ? 'fa-eye-slash' : 'fa-eye'" (click)="toggleConfirmPasswordVisibility()"></i>
+      </div>
+      <button type="submit" class="btn" [disabled]="loading">Crear Cuenta</button>
+      <p>¿Ya tienes una cuenta? <a routerLink="/login">Iniciar Sesión</a></p>
+    </form>
+  </div>
+</div>
