--- a/frontend/src/app/layouts/login/login.component.html
+++ b/frontend/src/app/layouts/login/login.component.html
@@ -1,3 +1,5 @@
+<!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
+<!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
 <div class="form-main">
   <div class="background-elements">
     <div class="circle circle-1"></div>
@@ -6,14 +8,14 @@
     <div class="circle circle-4"></div>
   </div>
   <div class="form-content">
-    <h3 class="gradient-text">Bienvenido</h3>
+    <h3 class="gradient-text">{{ 'login.loginButton' | translate }}</h3>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="input-box">
         <input
           type="text"
           class="input-control"
-          formControlName="username"
-          placeholder="Nombre de Usuario"
+          formControlName="usernameOrEmail"
+          placeholder="{{ 'login.username' | translate }} o {{ 'register.email' | translate }}"
         />
       </div>
       <div class="input-box">
@@ -21,15 +23,15 @@
           [type]="passwordVisible ? 'text' : 'password'"
           class="input-control"
           formControlName="password"
-          placeholder="Contraseña"
+          placeholder="{{ 'login.password' | translate }}"
         />
         <i class="fas" [ngClass]="passwordVisible ? 'fa-eye-slash' : 'fa-eye'" (click)="togglePasswordVisibility()"></i>
       </div>
       <div class="input-link" *ngIf="showForgotPassword">
-        <a href="#">¿Has olvidado tu contraseña?</a>
+        <a href="#">{{ 'login.forgotPassword' | translate }}</a>
       </div>
-      <button type="submit" class="btn" [disabled]="loading">Iniciar Sesión</button>
-      <p>¿No tienes una cuenta? <a routerLink="/register">Crear cuenta</a></p>
+      <button type="submit" class="btn" [disabled]="loading">{{ 'login.loginButton' | translate }}</button>
+      <p>{{ 'login.noAccount' | translate }} <a routerLink="/register">{{ 'login.createAccount' | translate }}</a></p>
     </form>
   </div>
 </div>
