ya el login, register, head, menu-left, footer, welcome tienen el frontend

--- a/frontend/src/app/layouts/base/base.component.html
+++ b/frontend/src/app/layouts/base/base.component.html
@@ -1,13 +1,12 @@
 <nz-layout style="min-height: 100%">
-  <app-header (changeIsCollapsed)="isCollapsedLeftChange()"></app-header>
+  <app-header (changeIsCollapsed)="isCollapsedLeftChange($event)"></app-header>
 
   <nz-layout>
     <nz-sider
-    style="background: #305680;"
+      class="custom-sider"
       nzCollapsible
-      nzWidth="250px"
-      nzBreakpoint="md"
       [nzCollapsedWidth]="0"
+      [nzWidth]="menuWidth"
       [(nzCollapsed)]="isCollapsedLeft"
     >
       <app-menu-left></app-menu-left>
