--- a/frontend/src/app/layouts/base/header/header.component.scss
+++ b/frontend/src/app/layouts/base/header/header.component.scss
@@ -1,72 +1,94 @@
-img {
-  max-width: 240px;
-}
-nz-divider.ant-divider {
-  height: 3rem;
-}
-
-.container {
-  border-color: black;
-  align-items: center;
+.custom-header {
+  background-color: #202020;
   display: flex;
-  color: #305680;
-}
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  height: 4.5rem; // Aumentamos la altura del header
 
-@media (max-width: 1100px) {
-  .name-user {
-    display: none;
-  }
-}
-@media (max-width: 900px) {
-  img {
-    max-width: 300px;
-  }
   .container {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    display: grid;
-
-    grid-template-columns: 40px auto 1fr;
-    grid-template-rows: auto auto;
-    grid-template-areas:
-      'logo        logo             logo'
-      'button-menu menu-breadcrumb  menu-login';
+    width: 100%;
   }
 
-  .logo {
-    grid-area: logo;
-    margin: 0 auto;
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
   }
 
   .button-menu {
-    grid-area: button-menu;
+    background-color: transparent;
+    border: none;
+    color: #a6ce39;
+    font-size: 1.5em;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    i {
+      font-size: 1.8em;
+    }
+  }
+
+  .header-title {
+    color: #a6ce39; // Cambiamos el color del título a verde
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+    flex-grow: 1;
+    margin: 0 20px;
   }
 
   .menu-login {
-    grid-area: menu-login;
+    display: flex;
+    align-items: center;
+
+    .user-avatar {
+      margin-right: 10px;
+    }
+
+    .userName-user {
+      color: #a6ce39; // Cambiamos el color del nombre de usuario a verde
+      font-size: 1.2em;
+      font-weight: bold;
+      margin-left: 10px;
+    }
   }
 }
 
-@media (max-width: 600px) {
-  .container {
-    align-items: center;
-    display: grid;
-    grid-template-columns: 40px auto auto;
-    grid-template-rows: auto auto;
-    grid-template-areas:
-      'logo         logo            menu-login  '
-      'button-menu  menu-breadcrumb menu-breadcrumb';
-  }
+// Estilos específicos para el avatar y el menú del usuario
+.nz-tooltip {
+  .nz-card {
+    background-color: #202020;
+    color: #ffffff;
+    border: none;
 
-  .logo {
-    grid-area: logo;
-  }
+    .user-card-content {
+      text-align: center;
+      color: #ffffff;
 
-  .button-menu {
-    grid-area: button-menu;
-    margin-right: 2px;
-  }
+      .user-avatar {
+        margin-bottom: 10px;
+      }
 
-  .menu-login {
-    grid-area: menu-login;
+      small {
+        color: #a6ce39;
+      }
+    }
+
+    .gray-2 {
+      color: #ffffff;
+      background-color: #444444;
+      border: none;
+
+      &:hover {
+        background-color: #a6ce39;
+        color: #202020;
+      }
+    }
   }
 }
