--- a/frontend/src/app/layouts/base/menu-left/menu-left.component.scss
+++ b/frontend/src/app/layouts/base/menu-left/menu-left.component.scss
@@ -105,3 +105,7 @@ nz-sider {
   max-width: $menu-width !important;
   background-color: $background-color-dark !important;
 }
+
+nz-tabs-nav{
+  display: none;
+}
