--- a/frontend/src/app/layouts/base/base.component.scss
+++ b/frontend/src/app/layouts/base/base.component.scss
@@ -4,3 +4,7 @@ nz-sider {
     overflow: hidden;
     z-index: 2; // Asegura que esté por encima del texto "Menú Principal"
 }
+
+.nz-tabs-nav{
+    display: none;
+  }
