--- a/frontend/src/app/modules/Sensor/Components/add-edit-sensor/add-edit-sensor.component.html
+++ b/frontend/src/app/modules/Sensor/Components/add-edit-sensor/add-edit-sensor.component.html
@@ -1,104 +1,58 @@
-<div class="body">
-  <div class="header">
-    <app-breadcrumb class="bread"></app-breadcrumb>
-  </div>
-
-  <div class="div-form">
-    <p>Crear-Actualizar Sensor</p>
-    <form nz-form [formGroup]="validateForm" [nzLayout]="'vertical'">
-
-
-      <nz-form-item>
-        <nz-form-label [nzSpan]="7">Tipo<span class="required-asterisk">*</span></nz-form-label>
-        <nz-form-control [nzSpan]="12" nzHasFeedback [nzValidateStatus]="validateForm.get('type')?.invalid && (validateForm.get('type')?.dirty || validateForm.get('type')?.touched) ? 'error' : ''">
-          <div class="input-container">
-            <input nz-input formControlName="type" placeholder="Escriba el nombre"
-                  [class.error-input]="validateForm.get('type')?.invalid && (validateForm.get('type')?.dirty || validateForm.get('type')?.touched)" />
+<div class="modal-body">
+  <form nz-form [formGroup]="validateForm" [nzLayout]="'vertical'">
+    <nz-form-item>
+      <nz-form-label [nzSpan]="24">Tipo de sensor<span class="required-asterisk">*</span></nz-form-label>
+      <nz-form-control [nzSpan]="24" nzHasFeedback [nzValidateStatus]="validateForm.get('type')?.invalid && (validateForm.get('type')?.dirty || (validateForm.get('type')?.touched)) ? 'error' : ''">
+        <div class="input-container">
+          <input nz-input formControlName="type" placeholder="Escriba el tipo de sensor"
+                [class.error-input]="validateForm.get('type')?.invalid && (validateForm.get('type')?.dirty || (validateForm.get('type')?.touched))" />
+        </div>
+        <ng-container *ngIf="validateForm.get('type')?.invalid && (validateForm.get('type')?.dirty || (validateForm.get('type')?.touched))">
+          <div class="error-message">
+            <div *ngIf="validateForm.get('type')?.errors?.['required']">Por favor introduzca el tipo de sensor!</div>
+            <div *ngIf="validateForm.get('type')?.errors?.['pattern']">El tipo de sensor solo puede contener letras, espacios y puntos.</div>
           </div>
-          <ng-container *ngIf="validateForm.get('type')?.invalid && (validateForm.get('type')?.dirty || validateForm.get('type')?.touched)">
-            <div class="error-message">
-              <div *ngIf="validateForm.get('type')?.errors?.['required']">Por favor introduzca el nombre!</div>
-              <div *ngIf="validateForm.get('type')?.errors?.['pattern']">El nombre solo puede contener letras, espacios y puntos.</div>
-            </div>
-          </ng-container>
-        </nz-form-control>
-      </nz-form-item>
+        </ng-container>
+      </nz-form-control>
+    </nz-form-item>
 
-      <nz-form-item>
-        <nz-form-label [nzSpan]="7">Descripcion <span class="required-asterisk">*</span></nz-form-label>
-        <nz-form-control [nzSpan]="12" nzHasFeedback [nzValidateStatus]="validateForm.get('description')?.invalid && (validateForm.get('description')?.dirty || validateForm.get('description')?.touched) ? 'error' : ''">
-          <div class="input-container">
-            <input nz-input formControlName="description" placeholder="Escriba la descripcion"
-                  [class.error-input]="validateForm.get('description')?.invalid && (validateForm.get('description')?.dirty || validateForm.get('description')?.touched)" />
+    <nz-form-item>
+      <nz-form-label [nzSpan]="24">Descripción<span class="required-asterisk">*</span></nz-form-label>
+      <nz-form-control [nzSpan]="24" nzHasFeedback [nzValidateStatus]="validateForm.get('description')?.invalid && (validateForm.get('description')?.dirty || (validateForm.get('description')?.touched)) ? 'error' : ''">
+        <div class="input-container">
+          <input nz-input formControlName="description" placeholder="Escriba la descripción"
+                [class.error-input]="validateForm.get('description')?.invalid && (validateForm.get('description')?.dirty || (validateForm.get('description')?.touched))" />
+        </div>
+        <ng-container *ngIf="validateForm.get('description')?.invalid && (validateForm.get('description')?.dirty || (validateForm.get('description')?.touched))">
+          <div class="error-message">
+            <div *ngIf="validateForm.get('description')?.errors?.['required']">Por favor introduzca la descripción!</div>
+            <div *ngIf="validateForm.get('description')?.errors?.['pattern']">La descripción solo puede contener letras, espacios y puntos.</div>
+            <div *ngIf="validateForm.get('description')?.errors?.['whitespace']">La descripción no puede estar vacía o contener solo espacios o puntos.</div>
           </div>
-          <ng-container *ngIf="validateForm.get('description')?.invalid && (validateForm.get('description')?.dirty || validateForm.get('description')?.touched)">
-            <div class="error-message">
-              <div *ngIf="validateForm.get('description')?.errors?.['required']">Por favor introduzca el nombre!</div>
-              <div *ngIf="validateForm.get('description')?.errors?.['pattern']">La descripcion solo puede contener letras, espacios y puntos.</div>
-              <div *ngIf="validateForm.get('description')?.errors?.['whitespace']">La descripcion no puede estar vacío o contener solo espacios o puntos.</div>
-            </div>
-          </ng-container>
-        </nz-form-control>
-      </nz-form-item>
+        </ng-container>
+      </nz-form-control>
+    </nz-form-item>
 
+    <nz-form-item>
+      <nz-form-label [nzSpan]="24">Seleccione su dispositivo<span class="required-asterisk">*</span></nz-form-label>
+      <nz-form-control [nzSpan]="24">
+        <nz-select formControlName="deviceId" nzShowSearch nzPlaceHolder="Seleccione un dispositivo" (ngModelChange)="onSelectDeviceChange($event)">
+          <nz-option *ngFor="let device of devices" [nzValue]="device.id" [nzLabel]="device.name"></nz-option>
+        </nz-select>
+      </nz-form-control>
+    </nz-form-item>
 
-
-      <nz-form-item>
-        <nz-form-label [nzSpan]="7">Id del dispositivo<span class="required-asterisk">*</span></nz-form-label>
-        <nz-form-control [nzSpan]="12" nzHasFeedback [nzValidateStatus]="validateForm.get('device')?.invalid && (validateForm.get('device')?.dirty || validateForm.get('device')?.touched) ? 'error' : ''">
-          <div class="input-container">
-            <input nz-input formControlName="device" placeholder="Escriba el Dispositivo"
-                  [class.error-input]="validateForm.get('device')?.invalid && (validateForm.get('device')?.dirty || validateForm.get('device')?.touched)" />
-          </div>
-          <ng-container *ngIf="validateForm.get('device')?.invalid && (validateForm.get('device')?.dirty || validateForm.get('device')?.touched)">
-            <div class="error-message">
-              <div *ngIf="validateForm.get('device')?.errors?.['required']">Por favor introduzca el nombre!</div>
-              <div *ngIf="validateForm.get('device')?.errors?.['pattern']">El enlace solo puede contener letras, espacios y puntos.</div>
-            </div>
-          </ng-container>
-        </nz-form-control>
-      </nz-form-item>
-
-      <nz-form-item>
-        <nz-form-label [nzSpan]="7">Id del escenario<span class="required-asterisk">*</span></nz-form-label>
-        <nz-form-control [nzSpan]="12" nzHasFeedback [nzValidateStatus]="validateForm.get('escenary')?.invalid && (validateForm.get('escenary')?.dirty || validateForm.get('escenary')?.touched) ? 'error' : ''">
-          <div class="input-container">
-            <input nz-input formControlName="escenary" placeholder="Escriba el Escenario"
-                  [class.error-input]="validateForm.get('escenary')?.invalid && (validateForm.get('escenary')?.dirty || validateForm.get('escenary')?.touched)" />
-          </div>
-          <ng-container *ngIf="validateForm.get('escenary')?.invalid && (validateForm.get('escenary')?.dirty || validateForm.get('escenary')?.touched)">
-            <div class="error-message">
-              <div *ngIf="validateForm.get('escenary')?.errors?.['required']">Por favor introduzca el nombre!</div>
-              <div *ngIf="validateForm.get('escenary')?.errors?.['pattern']">El enlace solo puede contener letras, espacios y puntos.</div>
-            </div>
-          </ng-container>
-        </nz-form-control>
-      </nz-form-item>
-
-      <nz-form-item class="actionbuttons">
-        <nz-form-control [nzOffset]="0" [nzSpan]="12">
-
-          <button nz-button nzType="primary" (click)="resetForm($event)" [routerLink]="['/sensors/list-sensors']" nzDanger>
-            <span nz-icon nzType="bars" nzTheme="outline"></span> Cancelar
-          </button>
-
-          <!-- Botón para guardar (crear/actualizar) sin redirección -->
-          <button nz-button class="butonstyle" (click)="submitForm(false)">
-            <i nz-icon [nzType]="isEditing ? 'save' : 'plus-circle'"></i>
-            <span *ngIf="isEditing" nz-icon nzType="bars" nzTheme="outline"></span>
-            {{ isEditing ? 'Actualizar' : 'Crear y agregar otro' }}
-          </button>
-
-          <!-- Botón para guardar (crear/actualizar) y luego redirigir al listado -->
-          <button nz-button class="butonstyle" (click)="submitForm(true)">
-            <i nz-icon nzType="save"></i>
-            <span nz-icon nzType="bars" nzTheme="outline"></span>
-            {{ isEditing ? 'Actualizar y regresar al listado' : 'Crear y regresar al listado' }}
-          </button>
-        </nz-form-control>
-      </nz-form-item>
-    </form>
-  </div>
+    <nz-form-item>
+      <nz-form-label [nzSpan]="24">Seleccione su escenario<span class="required-asterisk">*</span></nz-form-label>
+      <nz-form-control [nzSpan]="24">
+        <nz-select formControlName="escenaryId" nzShowSearch nzPlaceHolder="Seleccione un escenario" (ngModelChange)="onSelectEscenaryChange($event)">
+          <nz-option *ngFor="let escenary of escenarys" [nzValue]="escenary.id" [nzLabel]="escenary.name"></nz-option>
+        </nz-select>
+      </nz-form-control>
+    </nz-form-item>
+  </form>
 </div>
-
-
+<div class="modal-footer">
+  <button type="button" nz-button nzType="default" (click)="handleCancel()">Cancelar</button>
+  <button type="button" nz-button nzType="primary" (click)="submitForm()">Guardar</button>
+</div>
